Plot function added

--- a/Akin.ipynb
+++ b/Akin.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sympy import Symbol, lambdify"
+    "from sympy import Symbol, lambdify\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -50,6 +51,23 @@
    "metadata": {},
    "source": [
     "### Useful Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotRegressionGraph(data, regFunc, labels=[], name=\"graph\"):\n",
+    "    xmin = data[:,0].min\n",
+    "    xmax = data[:,0].max\n",
+    "    t1 = np.arange(xmin-1, xmax+1, 0.1)\n",
+    "    plt.figure()\n",
+    "    plt.plot(t1, regFunc(t1), 'b-', label='Regression line')\n",
+    "    plt.scatter(data[:,0], data[:,1], color=\"black\", label=\"Data points\")\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"{0}.png\".format(name))"
    ]
   },
   {
@@ -148,7 +166,7 @@
     "    I = 1 # output unit size\n",
     "    K = np.size(patterns, 1) - I # input layer size\n",
     "    J = hiddenLayerSize + 1 # h0 = -1 is added\n",
-    "    w_matrix = np.random.rand(J, K) # weights between input and hidden layer (we will exclude first row later since h0 is excluded)\n",
+    "    w_matrix = np.random.rand(J, K) # weights between input and hidden layer (we will exclude first row in the result since h0 is excluded)\n",
     "    W_matrix = np.random.rand(I, J) # weight between hidden and output layer\n",
     "    while(alpha >= epsilon):\n",
     "        np.random.shuffle(patterns)\n",
@@ -183,7 +201,7 @@
     "        actualOutputMatrix = W_matrix @ actualHiddens # o1, ..., oi\n",
     "        error = np.sum(np.square(y - actualOutputMatrix))\n",
     "        print(\"Iteration {0} : error = {1}\".format(t,error))\n",
-    "    return w_matrix, W_matrix, error"
+    "    return w_matrix[1:], W_matrix, error"
    ]
   },
   {
@@ -198,7 +216,7 @@
     },
     {
      "data": {
-      "text/plain": "(array([[ 1.71858636e-01,  9.65145829e-01],\n        [ 8.47339514e-01,  3.97995080e-01],\n        [ 6.16147498e-01,  6.29039082e-01],\n        [ 3.13448399e+02, -3.69468170e+04]]),\n array([[-127.77235014,  128.42128315,  128.78880676,  249.38554076]]),\n 7954415.602024415)"
+      "text/plain": "(array([[ 8.47339514e-01,  3.97995080e-01],\n        [ 6.16147498e-01,  6.29039082e-01],\n        [ 3.13448399e+02, -3.69468170e+04]]),\n array([[-127.77235014,  128.42128315,  128.78880676,  249.38554076]]),\n 7954415.602024415)"
      },
      "execution_count": null,
      "metadata": {},
