--- a/Akin.ipynb
+++ b/Akin.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backpropagation(patterns, hiddenLayerSize, alpha = 0.5, learningRate = 0.9, epsilon = 0.001, seed = 440):\n",
+    "def backpropagation(patterns, hiddenLayerSize, alpha = 0.5, momentum = 0.9, epsilon = 0.001, seed = 440):\n",
     "    np.random.seed(seed)\n",
     "    t = 0\n",
     "    P = np.size(patterns, 0)\n",
@@ -142,7 +142,7 @@
     "            W_matrix += delta_W\n",
     "            delta_w = alpha * S_hidden @ np.transpose(inputLayers[:,p].reshape(-1,1))\n",
     "            w_matrix += delta_w\n",
-    "        alpha = learningRate * alpha\n",
+    "        alpha = momentum * alpha\n",
     "        t += 1\n",
     "        actualHiddens = sigmoidalFunc(w_matrix @ inputLayers) # h1, ..., hj\n",
     "        actualOutputMatrix = W_matrix @ np.insert(actualHiddens, 0, -1, axis=0) # o1, ..., oi\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backpropagationWithForLoops(trainingData, hiddenLayerSize, alpha = 0.5, learningRate = 0.9, epsilon = 0.001, seed = 440):\n",
+    "def backpropagationWithForLoops(trainingData, hiddenLayerSize, alpha = 0.5, momentum = 0.9, epsilon = 0.001, seed = 440):\n",
     "    np.random.seed(seed)\n",
     "    t = 0\n",
     "    patterns = np.copy(trainingData)\n",
@@ -194,14 +194,14 @@
     "            for k in range(K):\n",
     "                dwk = alpha * S_H * x[k,p]\n",
     "                w_matrix[:,k] += dwk\n",
-    "        alpha *= learningRate\n",
+    "        alpha *= momentum\n",
     "        t += 1\n",
     "        actualHiddens = sigmoidalFunc(w_matrix @ x)\n",
     "        actualHiddens[0,:] = -1 # h1, ..., hj\n",
     "        actualOutputMatrix = W_matrix @ actualHiddens # o1, ..., oi\n",
     "        error = np.sum(np.square(y - actualOutputMatrix))\n",
     "        print(\"Iteration {0} : error = {1}\".format(t,error))\n",
-    "    return w_matrix[1:], W_matrix, error"
+    "    return w_matrix, W_matrix, error"
    ]
   },
   {
@@ -216,7 +216,7 @@
     },
     {
      "data": {
-      "text/plain": "(array([[ 8.47339514e-01,  3.97995080e-01],\n        [ 6.16147498e-01,  6.29039082e-01],\n        [ 3.13448399e+02, -3.69468170e+04]]),\n array([[-127.77235014,  128.42128315,  128.78880676,  249.38554076]]),\n 7954415.602024415)"
+      "text/plain": "(array([[ 1.71858636e-01,  9.65145829e-01],\n        [ 8.47339514e-01,  3.97995080e-01],\n        [ 6.16147498e-01,  6.29039082e-01],\n        [ 3.13448399e+02, -3.69468170e+04]]),\n array([[-127.77235014,  128.42128315,  128.78880676,  249.38554076]]),\n 7954415.602024415)"
      },
      "execution_count": null,
      "metadata": {},
@@ -234,9 +234,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
-     "text": "/home/akin/bin/miniconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: overflow encountered in exp\n  \"\"\"Entry point for launching an IPython kernel.\nIteration 1 : error = 8816929.259708159\nIteration 2 : error = 35416253.22628992\nIteration 3 : error = 8229024.724786728\nIteration 4 : error = 13164051.38481994\nIteration 5 : error = 15566757.510988269\nIteration 6 : error = 23564751.692394815\nIteration 7 : error = 53413296.88368054\nIteration 8 : error = 8874842.832893368\nIteration 9 : error = 16104438.438315174\nIteration 10 : error = 19138031.8672025\nIteration 11 : error = 8787954.196188327\nIteration 12 : error = 9487006.006960494\nIteration 13 : error = 8848522.9449617\nIteration 14 : error = 8041621.976536453\nIteration 15 : error = 8811230.183558227\nIteration 16 : error = 7983583.827350191\nIteration 17 : error = 8200299.000644428\nIteration 18 : error = 8601616.187121753\nIteration 19 : error = 9006039.439315354\nIteration 20 : error = 8088580.127783587\nIteration 21 : error = 8830037.52002777\nIteration 22 : error = 9067076.772440638\nIteration 23 : error = 8332115.190639583\nIteration 24 : error = 7953551.613080238\nIteration 25 : error = 8135425.774272785\nIteration 26 : error = 8020732.190837531\nIteration 27 : error = 8098359.552492526\nIteration 28 : error = 8003471.914861883\nIteration 29 : error = 7964538.080020943\nIteration 30 : error = 8017402.172059927\nIteration 31 : error = 8114208.977791673\nIteration 32 : error = 8057912.8363245055\nIteration 33 : error = 8006982.595615344\nIteration 34 : error = 7953699.985097693\nIteration 35 : error = 7953622.430792454\nIteration 36 : error = 7967588.135126663\nIteration 37 : error = 8031052.611641172\nIteration 38 : error = 7998728.2759004915\nIteration 39 : error = 7987646.749575665\nIteration 40 : error = 8021721.206016026\nIteration 41 : error = 7983345.612163168\nIteration 42 : error = 7991508.821021123\nIteration 43 : error = 7958543.5875437725\nIteration 44 : error = 7957833.414874554\nIteration 45 : error = 7953550.789499461\nIteration 46 : error = 7966646.686935366\nIteration 47 : error = 7954034.677815243\nIteration 48 : error = 7953757.23565327\nIteration 49 : error = 7954619.291296683\nIteration 50 : error = 7956950.19058742\nIteration 51 : error = 7954753.102880033\nIteration 52 : error = 7954967.705624387\nIteration 53 : error = 7954106.67874203\nIteration 54 : error = 7953854.318470058\nIteration 55 : error = 7953599.827251416\nIteration 56 : error = 7953865.975258309\nIteration 57 : error = 7953552.280365617\nIteration 58 : error = 7953737.631524678\nIteration 59 : error = 7953714.347670076\n"
+     "text": "Iteration 1 : error = 8816929.259708159\nIteration 2 : error = 35416253.22628992\nIteration 3 : error = 8229024.724786728\nIteration 4 : error = 13164051.38481994\nIteration 5 : error = 15566757.510988269\nIteration 6 : error = 23564751.692394815\nIteration 7 : error = 53413296.88368054\nIteration 8 : error = 8874842.832893368\nIteration 9 : error = 16104438.438315174\nIteration 10 : error = 19138031.8672025\n/home/akin/bin/miniconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: overflow encountered in exp\n  \"\"\"Entry point for launching an IPython kernel.\nIteration 11 : error = 8787954.196188327\nIteration 12 : error = 9487006.006960494\nIteration 13 : error = 8848522.9449617\nIteration 14 : error = 8041621.976536453\nIteration 15 : error = 8811230.183558227\nIteration 16 : error = 7983583.827350191\nIteration 17 : error = 8200299.000644428\nIteration 18 : error = 8601616.187121753\nIteration 19 : error = 9006039.439315354\nIteration 20 : error = 8088580.127783587\nIteration 21 : error = 8830037.52002777\nIteration 22 : error = 9067076.772440638\nIteration 23 : error = 8332115.190639583\nIteration 24 : error = 7953551.613080238\nIteration 25 : error = 8135425.774272785\nIteration 26 : error = 8020732.190837531\nIteration 27 : error = 8098359.552492526\nIteration 28 : error = 8003471.914861883\nIteration 29 : error = 7964538.080020943\nIteration 30 : error = 8017402.172059927\nIteration 31 : error = 8114208.977791673\nIteration 32 : error = 8057912.8363245055\nIteration 33 : error = 8006982.595615344\nIteration 34 : error = 7953699.985097693\nIteration 35 : error = 7953622.430792454\nIteration 36 : error = 7967588.135126663\nIteration 37 : error = 8031052.611641172\nIteration 38 : error = 7998728.2759004915\nIteration 39 : error = 7987646.749575665\nIteration 40 : error = 8021721.206016026\nIteration 41 : error = 7983345.612163168\nIteration 42 : error = 7991508.821021123\nIteration 43 : error = 7958543.5875437725\nIteration 44 : error = 7957833.414874554\nIteration 45 : error = 7953550.789499461\nIteration 46 : error = 7966646.686935366\nIteration 47 : error = 7954034.677815243\nIteration 48 : error = 7953757.23565327\nIteration 49 : error = 7954619.291296683\nIteration 50 : error = 7956950.19058742\nIteration 51 : error = 7954753.102880033\nIteration 52 : error = 7954967.705624387\nIteration 53 : error = 7954106.67874203\nIteration 54 : error = 7953854.318470058\nIteration 55 : error = 7953599.827251416\nIteration 56 : error = 7953865.975258309\nIteration 57 : error = 7953552.280365617\nIteration 58 : error = 7953737.631524678\nIteration 59 : error = 7953714.347670076\n"
     },
     {
      "data": {
