--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -33,12 +33,18 @@
     "w1 = Symbol(\"w1\")\n",
     "w2 = Symbol(\"w2\")\n",
     "\n",
-    "func_a = np.sum(np.square(y_train - w0 - w1 * x_train))\n",
+    "func_a_coefficients = np.array([np.sum(y_train**2), 1*np.size(y_train), np.sum((x_train**2)), np.sum(2*y_train), np.sum(2*y_train*x_train), np.sum(2*x_train)])\n",
+    "func_a_variables = np.array([1, w0**2, w1**2, -w0, -w1, w0*w1])\n",
+    "\n",
+    "func_b_coefficient = np.array([np.sum(y_train**2), 1*np.size(y_train), np.sum(x_train**2), np.sum(x_train**4), np.sum(2*y_train), np.sum(2*y_train*x_train), np.sum(2*y_train*x_train**2), np.sum(2*x_train), np.sum(2*x_train**2), np.sum(2*x_train**3)])\n",
+    "func_b_variables = np.array([1, w0**2, w1**2, w2**2, -w0, -w1, -w2, w0*w1, w0*w2, w1*w2])\n",
+    "\n",
+    "func_a = np.sum(func_a_coefficients*func_a_variables)\n",
     "f_a = lambdify([[w0, w1]], func_a, \"numpy\")\n",
     "gf_a = lambdify([[w0, w1]], func_a.diff([[w0, w1]]), \"numpy\")\n",
     "grad_fa = lambda x_arr : np.array(gf_a(x_arr), 'float64').reshape(1,len(x_arr))\n",
     "\n",
-    "func_b = np.sum(np.square(y_train - w0 - w1 * x_train - w2 * x_train**2))\n",
+    "func_b = np.sum(func_b_coefficient*func_b_variables)\n",
     "f_b = lambdify([[w0, w1, w2]], func_b, \"numpy\")\n",
     "gf_b = lambdify([[w0, w1, w2]], func_b.diff([[w0, w1, w2]]), \"numpy\")\n",
     "grad_fb = lambda x_arr : np.array(gf_b(x_arr), 'float64').reshape(1,len(x_arr))"
@@ -110,11 +116,28 @@
     "    x_star = (a+b)/2\n",
     "    return x_star\n",
     "\n",
-    "def ExactLineSearch(f, x0, d, eps=0.0000001):\n",
+    "def NewtonsMethod(df, ddf, x_0, epsilon):\n",
+    "    iteration = 0\n",
+    "    while True:\n",
+    "        dfx0 = df(x_0)\n",
+    "        ddfx0 = ddf(x_0)\n",
+    "        x_1 = x_0-dfx0/ddfx0\n",
+    "        iteration +=1\n",
+    "        if abs(x_0-x_1)<epsilon:\n",
+    "            break\n",
+    "        else: \n",
+    "            x_0 = x_1\n",
+    "    x_star = x_1\n",
+    "    return x_star\n",
+    "\n",
+    "def ExactLineSearch(f, x0, d, eps=10**(-10)):\n",
     "    alpha = Symbol('alpha')\n",
-    "    function_alpha = f(np.array(x0)+alpha*np.array(d))\n",
-    "    f_alp = lambdify(alpha, function_alpha, 'numpy')\n",
-    "    alp_star = BisectionMethod(f_alp, epsilon=eps)\n",
+    "    function_alpha = f(np.array(x0)+alpha*np.array(d)).item()\n",
+    "    f_alp = lambdify(alpha, function_alpha)\n",
+    "    alp_star = BisectionMethod(f_alp, epsilon=10**(-3))\n",
+    "    df_alp = lambdify(alpha, function_alpha.diff(alpha))\n",
+    "    ddf_alp = lambdify(alpha, function_alpha.diff(alpha).diff(alpha))\n",
+    "    alp_star = NewtonsMethod(df_alp, ddf_alp, alp_star, eps)\n",
     "    return alp_star"
    ]
   },
@@ -131,23 +154,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def steepestDescentMethod(f, grad_f, x_0, epsilon):\n",
-    "    xk = np.array(x_0).reshape(2,1)\n",
+    "def steepestDescentMethod(f, grad_f, x_0, descentEpsilon, exactLineEpsilon=10**(-10)):\n",
+    "    xk = np.array(x_0).reshape(-1,1)\n",
     "    k = 0\n",
     "    stop = False\n",
     "    output = OutputTable()\n",
     "    while(stop == False):\n",
     "        d = - np.transpose(grad_f(xk))\n",
-    "        if(np.linalg.norm(d) < epsilon):\n",
+    "        if(np.linalg.norm(d) < descentEpsilon):\n",
     "            stop = True\n",
     "        else:\n",
-    "            a = ExactLineSearch(f,xk,d)\n",
+    "            a = ExactLineSearch(f,xk,d, exactLineEpsilon)\n",
     "            xkp = xk + a*d\n",
     "            output.add_row(k, xk, f(xk), d, a, xkp)\n",
     "            k += 1\n",
     "            xk = xkp\n",
     "    output.add_row(k,xk,f(xk),d,None,np.array([]))\n",
-    "    return xk, np.asscalar(f(xk)), output"
+    "    print(k)\n",
+    "    return xk, f(xk).item(), output"
    ]
   },
   {
@@ -164,7 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws_b, fs_b, outputs_b = steepestDescentMethod(f_b, grad_fb, [0,0], 0.001)\n",
+    "outputs_a.table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws_b, fs_b, outputs_b = steepestDescentMethod(f_b, grad_fb, [100,0,0], 0.1)\n",
     "ws_b, fs_b"
    ]
   }
